--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <link rel="stylesheet" href="./styles/css/styles.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <a href="#" class="link-arrow">Read More</a>
   </body>
 </html>
