--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     <link rel="stylesheet" href="./styles/css/styles.css" />
   </head>
   <body>
-    <span class="badge badge--primary">10% off</span>
-    <span class="badge badge--secondary badge--small">30% off</span>
+    <ul class="list">
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
+    </ul>
+    <ul class="list list--tick">
+      <li class="list__item">Item 1</li>
+      <li class="list__item">Item 2</li>
+      <li class="list__item">Item 3</li>
+    </ul>
+    <a href="#" class="link-arrow">Read More</a>
   </body>
 </html>
