--- a/index.html
+++ b/index.html
@@ -15,16 +15,10 @@
     <link rel="stylesheet" href="./styles/css/styles.css" />
   </head>
   <body>
-    <ul class="list">
-      <li class="list__item">Item 1</li>
-      <li class="list__item">Item 2</li>
-      <li class="list__item">Item 3</li>
-    </ul>
-    <ul class="list list--tick">
-      <li class="list__item">Item 1</li>
-      <li class="list__item">Item 2</li>
-      <li class="list__item">Item 3</li>
-    </ul>
-    <a href="#" class="link-arrow">Read More</a>
+    <span class="icon-container">
+      <svg class="icon icon--primary">
+        <use xlink:href="images/sprite.svg#wordpress"></use>
+      </svg>
+    </span>
   </body>
 </html>
