--- a/index.html
+++ b/index.html
@@ -8,19 +8,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/css/normalize.css" />
     <link rel="stylesheet" href="./styles/css/styles.css" />
   </head>
   <body>
-    <article>
+    <article class="plan plan--popular">
       <div class="card card--secondary">
-        <header class="card__header">Card Title</header>
+        <header class="card__header">
+          <h3 class="plan__name">Entry</h3>
+          <span class="plan__price">$14</span>
+          <span class="plan__billing-cycle">/month</span>
+          <span class="badge badge--secondary badge--small">10% OFF</span>
+          <span class="plan__description">East start on the cloud</span>
+        </header>
         <div class="card__body">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum,
-          assumenda?
+          <ul class="list list--tick">
+            <li class="list__item">Unlimited Websites</li>
+            <li class="list__item">Unlimited Bandwidth</li>
+            <li class="list__item">100 GB SSD Sotrage</li>
+            <li class="list__item">3 GB RAM</li>
+          </ul>
+          <button class="btn btn--outline btn--block">Buy Now</button>
         </div>
       </div>
     </article>
